Date - <TBA>
Release Number - v1.5.1

Description - This version is a minor release with changes to clinical annotation and the underlying table structure to cleanup
depricated tables/fields.

=======================================================================================

Module - Core

* Updated core to v1.1.3 from v1.1 - See core changelog's for more details.


=======================================================================================

Module - Inventory

* Add inventorymanagement help messages.
* Add description for button allowing to access inventory object from another module.


=======================================================================================

Module - Clinical

* CHANGE (Eventum #436) - Added value 'Pager' to the Telephone Type field lookup list.


=======================================================================================

Module - Storage Layout


* Add storagelayout help messages.